--- a/src/style.css
+++ b/src/style.css
@@ -57,4 +57,37 @@ ul {
     row-gap: 13px;
 }
 
+.right{
+  flex-grow: 1;
+  background-color: papayawhip; 
+}
 
+.welcomemsg{
+    background-image: none;
+    cursor: auto;
+    display: none;
+}
+
+.upcomingmsg{
+    display: flex;
+   text-align: center;
+    justify-content: space-between;
+    color: white;   
+    gap: 30px;
+}
+.upcomingmon, .upcomingtue, .upcomingwed, .upcomingthu, .upcomingfri, .upcomingsat, .upcomingsun{
+    width: 300px;
+    height: 400px;
+    background-color: rgb(113, 175, 154);
+    border-radius: 6px;
+}
+
+input{
+    display: flex;
+    border-radius: 4px;
+    margin: auto;
+    background-color: aquamarine;   
+    width: 250px;
+    margin-top: 20px;
+    border: 1px solid white;
+}
