--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,18 @@ body{
     
 }
 
+.sidebarh{
+    display: flex;
+    background-image: url('../src/settings.png');
+    width: 45px;
+    height: 45px;
+    border: 3px solid rgb(220, 34, 34);
+    border-radius: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    margin: 18px 0px 8px 26px;
+}
 .today{
     background-image: url('../src/todayicon.png');
 }
@@ -39,7 +51,7 @@ h1{
 }
 
 .leftsidebar{
-    display: flex;
+    display: none;
     height: 100vh;
     width: 245px;
     background-color: rgb(61, 118, 118);
@@ -69,7 +81,7 @@ ul {
 }
 
 .upcomingmsg{
-    display: flex;
+    display: none;
    text-align: center;
     justify-content: space-between;
     color: white;   
@@ -91,3 +103,73 @@ input{
     margin-top: 20px;
     border: 1px solid white;
 }
+
+.taskhead{
+    border-radius: 4%;
+    background-color: aqua;
+    width: 500px;
+    margin-left: 30px;
+    text-align: center;
+    display: none;
+}
+
+.taskbody{
+    background-color: blueviolet;
+    width: 350px;
+    height: 550px;
+    display: none;
+}
+
+.taskinput, .personal1ipt, .personal2ipt{
+    width: 95%;
+    margin-top: 300px;
+}
+
+.personal1{
+    display: none;
+    border-radius: 10rem;
+    background-color: aqua;
+    width: 500px;
+    margin-left: 30px;
+    text-align: center;
+    padding: 11px;
+    margin-top: 24px;
+}
+
+.personalctr{
+    background-color: blueviolet;
+    width: 350px;
+    height: 550px;
+    display: none;
+    border-radius: 1rem;
+    margin-left: 30px;
+    margin-top: 20px;
+}
+
+.personallist{
+    width: 100%;
+    height: 100%;
+  display: none;
+}
+
+.personal2{
+    display: flex;
+    border-radius: 10rem;
+    background-color: aqua;
+    width: 500px;
+    margin-left: 30px;
+    text-align: center;
+    padding: 11px;
+    margin-top: 24px;
+}
+
+.personal2ctr{
+    background-color: blueviolet;
+    width: 350px;
+    height: 550px;
+    display: none;
+    border-radius: 1rem;
+    margin-left: 30px;
+    margin-top: 20px;
+}
+
